0.21 2021-09-09
- update README to avoid build failures

0.20 2021-09-07
- deal with GraphQL now not loading GraphQL::Plugin::Type::DateTime by default

0.19	Fri  8 Feb 23:21:21 GMT 2019
 - update to new SDL format

0.18	Fri  8 Feb 23:07:27 GMT 2019
 - dep on JSON::Validator::OpenAPI::Mojolicious - thanks @eserte

0.17	Thu  2 Aug 17:46:36 BST 2018
 - dep on OpenAPI::Client 0.17 - thanks @vanHoesel

0.16	Mon 30 Jul 09:39:45 BST 2018
 - update Mojolicious::Plugin::GraphQL dep - thanks @eserte

0.15	Thu 26 Jul 23:03:53 BST 2018
 - CI coverage now works
 - if local-full.t fails, re-run query with GRAPHQL_DEBUG=1

0.14	Mon 23 Jul 06:15:25 BST 2018
 - schema now only include ones used
 - CI improvements including coverage
 - add https://github.com/gothinkster/realworld api spec to tests

0.13	Sun  1 Jul 23:35:54 BST 2018
 - dump result if json_is fails

0.12	Sun 17 Jun 19:04:57 BST 2018
 - fix t/local.t which had invalid OpenAPI 2 spec, caught by JV 2.08

0.11	Fri Feb 23 04:18:47 GMT 2018
 - test, implement handling input of properties-less "object" using pairs

0.10	Mon Feb 19 08:04:52 GMT 2018
 - test, doc how to use with local OpenAPI app
 - fix autovivification bug

0.09	Sat Jan 27 09:21:52 GMT 2018
 - update YAML::XS version to dodge breakage

0.08	Sat Jan 27 05:00:26 GMT 2018
 - use Test::Snapshot for tests
 - better promise-handling including of reject
 - replace non-"valid" GQL characters with _ instead of deleting
 - rigorous tests of various fields and types etc with "."
 - nested inputs
 - treat "definitions" that are an array not as type but as that array
 - add corpus https://github.com/cliffano/swaggy-jenkins

0.07	Sat Dec 30 12:40:31 GMT 2017
 - update resolver docs
 - deal with type "object" as key/value
 - handle empty-string enum values
 - test/implement using local OpenAPI, using promises

0.06	Tue 12 Dec 03:48:59 GMT 2017
 - resolver die if not is_success

0.05	Sun Dec 10 23:08:40 GMT 2017
 - no error if hash key not present